--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,6 +3,12 @@
   "description": "Fixes OCP4 project selector by displaying full project name",
   "version": "1.0",
   "manifest_version": 3,
+  "permissions": [
+    "storage"
+  ],
+  "action": {
+    "default_popup": "index.html"
+  },
   "content_scripts": [{
     "js": ["scripts/modify.js"],
     "matches": ["https://your-cluster-url/*"]
