Update manifest to allow all URLs and enhance project management script with storage integration

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,6 +11,6 @@
   },
   "content_scripts": [{
     "js": ["scripts/modify.js"],
-    "matches": ["https://your-cluster-url/*"]
+    "matches": ["<all_urls>"]
   }]
 }
