--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.15.6",
         "@types/chrome": "^0.0.302",
         "react": "^19.0.0",
         "react-dom": "^19.0.0"
