--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "OpenShift Project Alias",
-    "description": "This extension allows you to create aliases for OpenShift projects.",
+    "name": "OpenShift Project Aliases",
+    "description": "Assign human-readable aliases to OpenShift projects.",
     "version": "1.0",
     "manifest_version": 3,
     "permissions": [
